syntax = "proto3";
option java_package = "org.sq.gameDemo.common.proto";
option java_outer_classname = "SenceProto";
message Sence {
    int32 id = 1;
    string name = 2;
    uint64 time = 3;        //时间戳(单位:毫秒)
}
//请求
message RequestSenceInfo {
    uint64 msg_id = 1;      //消息id
    int32 senceId  = 2;
    uint64 time = 3;        //时间戳(单位:毫秒)
}

