syntax = "proto3";
option java_package = "org.sq.gameDemo.common.proto";
option java_outer_classname = "UserProto";
message User {
    uint32 id = 1;          //用户id
    string name = 2;
    string password = 3;
    string token = 4;
}
//登陆注册的请求体
message RequestUserInfo {
    uint64 msg_id = 1;      //消息id
    uint64 time =2;        //时间戳(单位:毫秒)
    string token = 4;
    
    User user = 5;
}

message ResponseUserInfo {
    uint64 msg_id = 1;      //消息id
    uint64 time =2;        //时间戳(单位:毫秒)
    int32 result  = 3;
    string token = 4;       //返回token客户端保存
    string content = 5;

}